commit info replay i18n