@@ -6,13 +6,15 @@ import java.io.*;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * Created by hcj on 3/16/17.
  */
 public class ProcessManage {
     private final static String SHELL_FILE_DIR = System.getProperty("user.dir") + "/bin/";
-    private final static String RUNNING_SHELL_FILE = "doSpringI18n.sh";
+    private static String RUNNING_SHELL_FILE = "doSpringI18n.sh";
     /**
      * 输入文件
      */
@@ -54,7 +56,10 @@ public class ProcessManage {
      */
     private void dealLines(String str, Map map) {
         if (str != null && str.length() > 0) {
-            map.put(str, str.length());
+            String[] strArr = str.split("@#@");
+            if (strArr.length == 2) {
+                map.put(str, strArr[1].length());
+            }
         }
     }
 
@@ -69,7 +74,12 @@ public class ProcessManage {
             if (value != null && value.length() > 0) {
                 String[] str = value.split("@#@");
                 if (str.length == 2) {
-                    int stat = doProcess(str, fileDirStr, 1);
+                    int stat = 0;
+                    try {
+                        stat = doProcess(str, fileDirStr, 1);
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
                     if (stat == 2) {
                         System.out.println(String.format("replay spring message fail: key=%s; name=%s", str[0], str[1]));
                     }
@@ -87,44 +97,67 @@ public class ProcessManage {
      * @param status
      * @return
      */
-    private int doProcess(String[] str, String param3, int status) {
+    private int doProcess(String[] str, String param3, int status) throws Exception {
         //默认2就是返回失败
         int runningStatus = 2;
         String param1 = str[0];
         String param2 = str[1].replaceAll("\\[", "\\\\[").replaceAll("\\]", "\\\\]").replaceAll("#", "\\\\#");
-        if (status == 1) {
-            ProcessBuilder pb = new ProcessBuilder("./" + RUNNING_SHELL_FILE, param1, param2, param3);
-            pb.directory(new File(SHELL_FILE_DIR));
-            String s;
-            try {
-                Process p = pb.start();
-                BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
-                BufferedReader stdError = new BufferedReader(new InputStreamReader(p.getErrorStream()));
-                while ((s = stdInput.readLine()) != null) {
-                    System.out.println("stdInput error:" + s);
-                }
-                while ((s = stdError.readLine()) != null) {
-                    System.out.println("stdError error:" + s);
-                }
-                try {
-                    runningStatus = p.waitFor();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            } catch (Exception ex) {
-                ex.printStackTrace();
+
+        String patternKey = "[\\u4e00-\\u9fa5]+";
+        Pattern pattern = Pattern.compile(patternKey);
+        Matcher match = pattern.matcher(param2);
+        if (match.find()) {
+            String patternKey2 = "[^\\u4e00-\\u9fa5]+";
+            Pattern pattern2 = Pattern.compile(patternKey2);
+            Matcher match2 = pattern2.matcher(param2);
+            if (match2.find()) {
+                this.RUNNING_SHELL_FILE = "doSpringI18nAll.sh";
             }
-        } else {
-            try {
-                Process p = Runtime.getRuntime().exec(SHELL_FILE_DIR + RUNNING_SHELL_FILE + " " + param1 + " " + param2 + " " + param3);
-                runningStatus = p.waitFor();
-            } catch (InterruptedException ex) {
-                ex.printStackTrace();
-            } catch (Exception e) {
-                e.printStackTrace();
+            if (status == 1) {
+                runningStatus = doProcessBuilder(param1, param2, param3);
+            } else {
+                runningStatus = doProcessExec(param1, param2, param3);
             }
         }
         return runningStatus;
     }
 
+    private int doProcessBuilder(String param1, String param2, String param3) {
+        int runningStatus = 2;
+        ProcessBuilder pb = new ProcessBuilder("./" + RUNNING_SHELL_FILE, param1, param2, param3);
+        pb.directory(new File(SHELL_FILE_DIR));
+        String s;
+        try {
+            Process p = pb.start();
+            BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            BufferedReader stdError = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+            while ((s = stdInput.readLine()) != null) {
+                System.out.println("stdInput error:" + s);
+            }
+            while ((s = stdError.readLine()) != null) {
+                System.out.println("stdError error:" + s);
+            }
+            try {
+                runningStatus = p.waitFor();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        } catch (Exception ex) {
+            ex.printStackTrace();
+        }
+        return runningStatus;
+    }
+
+    private int doProcessExec(String param1, String param2, String param3) {
+        int runningStatus = 2;
+        try {
+            Process p = Runtime.getRuntime().exec(SHELL_FILE_DIR + RUNNING_SHELL_FILE + " " + param1 + " " + param2 + " " + param3);
+            runningStatus = p.waitFor();
+        } catch (InterruptedException ex) {
+            ex.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return runningStatus;
+    }
 }
